--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,10 +31,10 @@ jobs:
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.imageName }}:latest
 DeployJob:
- needs: CICDjobs
- runs-on: self-hosted
- steps:
- - name: deploy docker image
-   run: |
-     docker run -d -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/${{ env.imageName }}:latest
+  needs: CICDjob
+  runs-on: self-hosted
+  steps:
+  - name: Deploy the Image 
+    run: |
+     docker run -d -P ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.imageName }}:latest
      docker ps -a
