--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,54 @@
 name: deploy code build
-on: push
+
+on: 
+  push:
+    branches:
+      - main  # Ensure that it triggers on the main branch (or adjust as necessary)
+
 env:
   imageName: "myjavaapp"
+
 jobs:
   CICDjobs:
     runs-on: ubuntu-latest
+
     steps:
-    - name: clone current repository
-      uses: actions/checkout@v2
-    - name: setup java17 and maven
-      uses: actions/setup-java@v2
-      with:
-        distribution: 'temurin'
-        java-version: '17'
-        cache: 'maven'
-    - name: build the code
-      run: mvn clean package
-    - name: install docker
-      uses: docker/setup-docker-action@v2
-    - name: login to docker hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: build and push
-      uses: docker/build-push-action@v6
-      with:
-        context: .
-        file: Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.imageName }}:latest
-DeployJob:
-  needs: CICDjob
-  runs-on: self-hosted
-  steps:
-  - name: Deploy the Image 
-    run: |
-     docker run -d -P ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.imageName }}:latest
-     docker ps -a
+      - name: clone current repository
+        uses: actions/checkout@v2
+
+      - name: setup java17 and maven
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'maven'
+
+      - name: build the code
+        run: mvn clean package
+
+      - name: install docker
+        uses: docker/setup-docker-action@v2
+
+      - name: login to docker hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.imageName }}:latest
+
+  DeployJob:
+    needs: CICDjobs  # Ensure this job runs after CICDjobs
+    runs-on: self-hosted
+
+    steps:
+      - name: Deploy the Image
+        run: |
+          docker run -d -P ${{ secrets.DOCKER_USERNAME }}/${{ env.imageName }}:latest
+          docker ps -a
