--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ env:
   imageName: "myjavaapp"
 jobs:
   CICDjobs:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
     - name: clone current repository
       uses: actions/checkout@v2
@@ -29,4 +29,12 @@ jobs:
         context: .
         file: Dockerfile
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.imageName }}:v1
+        tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.imageName }}:latest
+ DeployJob:
+  needs: CICDjobs
+  runs-on: self-hosted
+  steps:
+  - name: deploy docker image
+    run: |
+     docker run -d -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/${{ env.imageName }}:latest
+     docker ps -a
